--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VUE_APP_GRAPHQL_BASE_URL = https://rickandmortyapi.com/graphql/
 VUE_APP_API_BASE_URL = https://rickandmortyapi.com/api/
+VUE_APP_DB_NAME = vue-app
+VUE_APP_DB_CHARACTER = characters
+VUE_APP_DB_LOCATIONS = locations
